Added navigation, pagination for swiper.

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -29,7 +29,8 @@
   <!-- /fonts preload -->
   <title>Benhome: Home</title>
   <link rel="stylesheet" href="./index.scss">
-  <script src="./index.js" defer></script>
+  <!-- <script src="../../../node_modules/swiper/swiper-bundle.min.js" type="module" defer></script> -->
+  <script src="./index.js" type="module" defer></script>
 </head>
 
 <body>
@@ -94,9 +95,9 @@
               </h2>
             </div>
             <div class="swiper-slide__lower">
-              <button class="swiper-slide__btn">
+              <a class="swiper-slide__btn" href="#">
                 Learn More
-              </button>
+              </a>
               <p class="swiper-slide__text">
                 The font blends perfectly with white backgrounds, making the design unique and presentable The font
                 blends perfectly with
@@ -110,9 +111,9 @@
               </h2>
             </div>
             <div class="swiper-slide__lower">
-              <button class="swiper-slide__btn">
+              <a class="swiper-slide__btn" href="#">
                 Learn more
-              </button>
+              </a>
               <p class="swiper-slide__text">
                 The font blends perfectly with white backgrounds, making the design unique and presentable The font
                 blends perfectly with
@@ -126,9 +127,9 @@
               </h2>
             </div>
             <div class="swiper-slide__lower">
-              <button class="swiper-slide__btn">
+              <a class="swiper-slide__btn" href="#">
                 Learn more
-              </button>
+              </a>
               <p class="swiper-slide__text">
                 The font blends perfectly with white backgrounds, making the design unique and presentable The font
                 blends perfectly with
