Updated packs, pics was partly auto compressed.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -23,7 +23,7 @@
   <!-- /fonts preload -->
   <title>Benhome: About</title>
   <link rel="stylesheet" href="./about.scss">
-  <script src="./about.js" defer></script>
+  <script src="./about.js" type="module" defer></script>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
       <button class="header__mobile-btn--open">
       </button>
       <a class="header__logo" href="/" aria-label="Header logo">
-        <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
+        <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo-white">
       </a>
       <nav class="header__nav">
         <button class="header__mobile-btn--close">
@@ -296,7 +296,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about/person1.png" alt="person1">
+            <img class="team__person-photo-img" src="../../images/pages/about/person1.png?quality=70" alt="person1">
           </div>
         </div>
         <div class="team__person team__person--2">
@@ -328,7 +328,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about/person6.png" alt="person6">
+            <img class="team__person-photo-img" src="../../images/pages/about/person6.png?quality=70" alt="person6">
           </div>
         </div>
       </div>
@@ -362,7 +362,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about/person3.png" alt="person3">
+            <img class="team__person-photo-img" src="../../images/pages/about/person3.png?quality=70" alt="person3">
           </div>
         </div>
         <div class="team__person team__person--4">
@@ -394,7 +394,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about/person4.png" alt="person4">
+            <img class="team__person-photo-img" src="../../images/pages/about/person4.png?quality=70" alt="person4">
           </div>
         </div>
       </div>
@@ -424,7 +424,7 @@
   </section>
   <footer class="footer">
     <a class="footer__logo" href="/" aria-label="Footer logo">
-      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
+      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo">
     </a>
     <p class="footer__rights">
       &copy; Sentro 2021 <br>
