--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -41,7 +41,7 @@
       <button class="header__mobile-btn--open">
       </button>
       <a class="header__logo" href="/" aria-label="Header logo">
-        <img class="header__logo-benhome" src="../../images/general.imgs/logo-white.png" alt="logo-white">
+        <img class="header__logo-benhome" src="../../images/general.imgs/logo-white.png?quality=70" alt="logo-white">
       </a>
       <nav class="header__nav">
         <button class="header__mobile-btn--close">
@@ -376,8 +376,6 @@
         </p>
       </div>
       <div class="trends__upper-right">
-        <!-- <div class="trends__upper-img">
-        </div> -->
       </div>
     </div>
     <div class="trends__lower">
@@ -488,7 +486,7 @@
               </h4>
               <button class="news__accordion-btn" tabindex="0">
                 <img class="news__accordion-arrow news__accordion-arrow--active"
-                  src="../../images/pages/index/news-section/accordion-arrow.png" alt="arrow">
+                  src="../../images/pages/index/news-section/accordion-arrow.png?quality=70" alt="arrow">
               </button>
             </div>
             <div class="news__accordion-tab-lower news__accordion-tab-lower--active">
@@ -507,7 +505,7 @@
                 Welcome to our new site
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png"
+                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
                   alt="arrow">
               </button>
             </div>
@@ -526,7 +524,7 @@
                 Trending 2021
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img src="../../images/pages/index/news-section/accordion-arrow.png" alt="arrow"
+                <img src="../../images/pages/index/news-section/accordion-arrow.png?quality=70" alt="arrow"
                   class="news__accordion-arrow">
               </button>
             </div>
@@ -545,7 +543,7 @@
                 Best wood for tables
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png"
+                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
                   alt="arrow">
               </button>
             </div>
@@ -565,7 +563,7 @@
                 New contact form
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png"
+                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
                   alt="arrow">
               </button>
             </div>
@@ -584,7 +582,7 @@
                 Trending colors
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png"
+                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
                   alt="arrow">
               </button>
             </div>
@@ -629,7 +627,7 @@
   </section>
   <footer class="footer">
     <a class="footer__logo" href="/" aria-label="Footer logo">
-      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
+      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo">
     </a>
     <p class="footer__rights">
       &copy; Sentro 2021 <br>
