Added readme, typographed text partly, optimized pics.

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -29,7 +29,6 @@
   <!-- /fonts preload -->
   <title>Benhome: Home</title>
   <link rel="stylesheet" href="./index.scss">
-  <!-- <script src="../../../node_modules/swiper/swiper-bundle.min.js" type="module" defer></script> -->
   <script src="./index.js" type="module" defer></script>
 </head>
 
@@ -85,13 +84,11 @@
     </div>
     <div class="header__lower">
       <div class="swiper-container">
-        <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
-          <!-- Slides -->
           <div class="swiper-slide swiper-slide--1">
             <div class="swiper-slide__upper">
               <h2 class="swiper-slide__title">
-                Slide 1
+                Benhome
               </h2>
             </div>
             <div class="swiper-slide__lower">
@@ -99,15 +96,16 @@
                 Learn More
               </a>
               <p class="swiper-slide__text">
-                The font blends perfectly with white backgrounds, making the design unique and presentable The font
-                blends perfectly with
+                Benhome Architecture can enrich your commercial and residential
+                properties, hotels and retail buildings. Your search for architectural visualization ends
+                with&nbsp;us.
               </p>
             </div>
           </div>
           <div class="swiper-slide swiper-slide--2">
             <div class="swiper-slide__upper">
               <h2 class="swiper-slide__title">
-                Slide 2
+                Benhome Interior
               </h2>
             </div>
             <div class="swiper-slide__lower">
@@ -115,15 +113,15 @@
                 Learn more
               </a>
               <p class="swiper-slide__text">
-                The font blends perfectly with white backgrounds, making the design unique and presentable The font
-                blends perfectly with
+                Our work experience includes residential design, commercial design,
+                architectural engineering and interior design.
               </p>
             </div>
           </div>
           <div class="swiper-slide swiper-slide--3">
             <div class="swiper-slide__upper">
               <h2 class="swiper-slide__title">
-                Slide 3
+                Benhome Exterior
               </h2>
             </div>
             <div class="swiper-slide__lower">
@@ -131,22 +129,18 @@
                 Learn more
               </a>
               <p class="swiper-slide__text">
-                The font blends perfectly with white backgrounds, making the design unique and presentable The font
-                blends perfectly with
+                We&nbsp;are passionate about providing our clients with a&nbsp;high level of&nbsp;service and always aim
+                to&nbsp;exceed their expectations.
               </p>
-
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
-        <!-- If we need pagination -->
-        <!-- If we need navigation buttons -->
+        <div class="swiper-pagination">
+        </div>
         <div class="swiper-button-prev">
         </div>
         <div class="swiper-button-next">
         </div>
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
       </div>
     </div>
   </header>
@@ -157,14 +151,12 @@
           Interior
         </p>
         <h2 class="card__title">
-          House in <br>
-          Forest
+          Indica <br>
+          Coworking
         </h2>
         <p class="card__text">
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by
-          English
-          14 translation by H. Rackham.
+          Main goal for Indica was to&nbsp;increase client&rsquo;s conversion by&nbsp;implement their new format of
+          coworking. Benhome presented unique interior style to&nbsp;reach out new horizons for Indica.
         </p>
         <a class="card__link projects__card-link" href="#" aria-label="Portfolio item 1">
         </a>
@@ -176,14 +168,13 @@
           Interior
         </p>
         <h2 class="card__title">
-          House in <br>
-          Forest
+          Gold Line <br>
+          Residence
         </h2>
         <p class="card__text">
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by
-          English
-          14 translation by H. Rackham.
+          Gold Line Residence is&nbsp;a&nbsp;group of&nbsp;convenient dwellings located in&nbsp;the nothern part
+          of&nbsp;West England.
+          Benhome focused on&nbsp;outstanding interior design for inhabitants of&nbsp;the residence.
         </p>
         <a class="card__link projects__card-link" href="#" aria-label="Portfolio item 2">
         </a>
@@ -195,14 +186,14 @@
           Exterior
         </p>
         <h2 class="card__title">
-          House in <br>
-          Forest
+          Patagonia <br>
+          Office
         </h2>
         <p class="card__text">
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by
-          English
-          14 translation by H. Rackham.
+          Patagonia is&nbsp;a&nbsp;famous producer of&nbsp;environment friendly consumer goods.
+          The company intended to&nbsp;uphold its brand by&nbsp;building a&nbsp;new office that would be&nbsp;made
+          from nature-friendly materials. Benhome swiftly and effectively resolved all the requirements
+          related to&nbsp;the project.
         </p>
         <a class="card__link projects__card-link" href="#" aria-label="Portfolio item 3">
         </a>
@@ -214,14 +205,13 @@
           Interior
         </p>
         <h2 class="card__title">
-          House in <br>
-          Forest
+          N1 Properties <br>
+          Resort
         </h2>
         <p class="card__text">
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by
-          English
-          14 translation by H. Rackham.
+          Our misson was to&nbsp;help N1&nbsp;Properties be&nbsp;more inventive and effective competitor on&nbsp;the
+          hotel market.
+          We&nbsp;started to&nbsp;implement special design services that led the company to&nbsp;a&nbsp;business growth.
         </p>
         <a class="card__link projects__card-link" href="#" aria-label="Portfolio item 4">
         </a>
@@ -233,14 +223,15 @@
           Exterior
         </p>
         <h2 class="card__title">
-          House in <br>
-          Forest
+          Banzai <br>
+          Hotel
         </h2>
         <p class="card__text">
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by
-          English
-          14 translation by H. Rackham.
+          Since 2020&nbsp;we were involved in&nbsp;a&nbsp;restoration of&nbsp;a&nbsp;chain of&nbsp;modern hotels based
+          on&nbsp;the Japanese culture
+          features.
+          In&nbsp;short term we&nbsp;were able to&nbsp;enhance company&rsquo;s goals to&nbsp;be&nbsp;more attractive for
+          its clients.
         </p>
         <a class="card__link projects__card-link" href="#" aria-label="Portfolio item 5">
         </a>
@@ -271,8 +262,8 @@
                 Explore
               </a>
               <p class="services__list-item-text">
-                Our work experience include residential design, commercial design,
-                architectural engineering and interior design. My clients include
+                Our work experience includes residential design, commercial design,
+                architectural engineering and interior design. Our clients include
                 residential, commercial and industrial firms.
               </p>
             </div>
@@ -292,7 +283,7 @@
                 Explore
               </a>
               <p class="services__list-item-text">
-                We believe that you can reach a lot more in your project with planning.
+                We&nbsp;believe that you can reach a&nbsp;lot more in&nbsp;your project with planning.
               </p>
             </div>
           </li>
@@ -311,7 +302,8 @@
                 Explore
               </a>
               <p class="services__list-item-text">
-                Landscape disigns itself is a 'distillation of the views, ideas and thoughts' held by our firm.
+                Landscape disigns itself is&nbsp;a &rsquo;distillation of&nbsp;the views, ideas and thoughts&rsquo; held
+                by&nbsp;our firm.
               </p>
             </div>
           </li>
@@ -331,7 +323,7 @@
               </a>
               <p class="services__list-item-text">
                 The first thing people notice and the last thing they remember.
-                Successful branding recognition is our main goal.
+                Successful branding recognition is&nbsp;our main goal.
               </p>
             </div>
           </li>
@@ -350,9 +342,9 @@
                 Explore
               </a>
               <p class="services__list-item-text">
-                We’re not perfect, but we strive for excellence. We work hard
-                to find the best way to make our customers happy, and we’re
-                excited to be able to share out style with you
+                We&rsquo;re not perfect, but we&nbsp;strive for excellence. We&nbsp;work hard
+                to&nbsp;find the best way to&nbsp;make our customers happy, and we&rsquo;re
+                excited to&nbsp;be&nbsp;able to&nbsp;share out style with you
               </p>
             </div>
           </li>
@@ -370,9 +362,9 @@
           Trends.
         </h3>
         <p class="trends__upper-text">
-          Benhome Architectural Design Studio can enrich your marketing promotion for
-          you commercial and residential Properties, Hotel and Retail buildings.
-          Your search for architectural visualization Firm ends with us.
+          Benhome Architecture can enrich your commercial and residential
+          properties, hotels and retail buildings. Your search for architectural visualization ends
+          with&nbsp;us.
         </p>
       </div>
       <div class="trends__upper-right">
@@ -388,7 +380,8 @@
             Years Experience
           </h2>
           <p class="trends__lower-text">
-            We are passionate about providing our clients with a high level of service and always aim to exceed their
+            We&nbsp;are passionate about providing our clients with a&nbsp;high level of&nbsp;service and always aim
+            to&nbsp;exceed their
             expectations.
           </p>
         </div>
@@ -400,7 +393,7 @@
         <div class="trends__video-wrapper">
           <div class="trends__play-btn">
           </div>
-          <video class="trends__video" poster="../../images/pages/index/trends-section/barn-house.jpg">
+          <video class="trends__video" poster="../../images/pages/index/trends-section/barn-house.jpg?quality=70">
             <source src="../../videos/index/modern-house-1.mp4" type="video/mp4">
             Your browser doesn't support video player.
           </video>
@@ -425,9 +418,9 @@
                 Rebecca Jones
               </p>
               <p class="clients__text">
-                Benhome has a great team, friendly relation, they designed the ideal house for my needs.
-                It is a fantastic project, we are very happy!
-                They were originally recommended to us by a friend and now we recommend them.
+                Benhome has a&nbsp;great team, friendly relation, they designed the ideal house for my&nbsp;needs.
+                It&nbsp;is&nbsp;a&nbsp;fantastic project, we&nbsp;are very happy!
+                They were originally recommended to&nbsp;us by&nbsp;a&nbsp;friend and now we&nbsp;recommend them.
               </p>
             </div>
             <div class="clients__lower--right">
@@ -437,9 +430,9 @@
                 Adam Stone
               </p>
               <p class="clients__text">
-                Working with Benhome team, is working with glamour,
+                Working with Benhome team, is&nbsp;working with glamour,
                 responsibility, and commitment. They will work with your needs and help you going
-                through the transition of renovating your home.
+                through the transition of&nbsp;renovating your home.
               </p>
             </div>
           </div>
@@ -451,8 +444,8 @@
                 Andrew Yang
               </p>
               <p class="clients__text">
-                The entire Benhome team was truly amazing to work with.
-                They fully captured our vision and need for functionality and gave us our dream home.
+                The entire Benhome team was truly amazing to&nbsp;work with.
+                They fully captured our vision and need for functionality and gave&nbsp;us our dream home.
               </p>
             </div>
             <div class="clients__lower--right">
@@ -462,9 +455,9 @@
                 Liza Warren
               </p>
               <p class="clients__text">
-                When we first met the DKOR team we knew we had found what we needed:
-                a group of young, enthusiastic, sensitive designers.
-                And also as we soon found talented and efficient.
+                When we&nbsp;first met the Benhome team we&nbsp;knew we&nbsp;had found what we&nbsp;needed:
+                a&nbsp;group of&nbsp;young, enthusiastic, sensitive designers.
+                And also as&nbsp;we&nbsp;soon found talented and efficient.
               </p>
             </div>
           </div>
@@ -494,8 +487,8 @@
                 Explore
               </a>
               <p class="news__acccordion-text">
-                The most important thing to think about is: What are the skills that you will need in order for you
-                design a well
+                The most important aspect to&nbsp;think about&nbsp;is: What are the skills that you need for you
+                to&nbsp;design well.
               </p>
             </div>
           </div>
@@ -505,8 +498,8 @@
                 Welcome to our new site
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
-                  alt="arrow">
+                <img class="news__accordion-arrow"
+                  src="../../images/pages/index/news-section/accordion-arrow.png?quality=70" alt="arrow">
               </button>
             </div>
             <div class="news__accordion-tab-lower">
@@ -533,8 +526,7 @@
                 Explore
               </a>
               <p class="news__acccordion-text">
-                Immerse to the most trending projects we sorted for you today!
-              </p>
+                Immerse to&nbsp;the most trending projects we&nbsp;sorted for you today! </p>
             </div>
           </div>
           <div class="news__accordion-tab">
@@ -543,8 +535,8 @@
                 Best wood for tables
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
-                  alt="arrow">
+                <img class="news__accordion-arrow"
+                  src="../../images/pages/index/news-section/accordion-arrow.png?quality=70" alt="arrow">
               </button>
             </div>
             <div class="news__accordion-tab-lower">
@@ -552,7 +544,7 @@
                 Explore
               </a>
               <p class="news__acccordion-text">
-                How to deside what wood to choose on the market?
+                How to&nbsp;deside what wood to&nbsp;choose on&nbsp;the market?
                 Click and see how professionals seek their best materials.
               </p>
             </div>
@@ -563,8 +555,8 @@
                 New contact form
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
-                  alt="arrow">
+                <img class="news__accordion-arrow"
+                  src="../../images/pages/index/news-section/accordion-arrow.png?quality=70" alt="arrow">
               </button>
             </div>
             <div class="news__accordion-tab-lower">
@@ -572,7 +564,7 @@
                 Explore
               </a>
               <p class="news__acccordion-text">
-                We renewed our contact form, check this out!
+                We&nbsp;renewed our contact form, check this out!
               </p>
             </div>
           </div>
@@ -582,8 +574,8 @@
                 Trending colors
               </h4>
               <button class="news__accordion-btn" tabindex="0">
-                <img class="news__accordion-arrow" src="../../images/pages/index/news-section/accordion-arrow.png?quality=70"
-                  alt="arrow">
+                <img class="news__accordion-arrow"
+                  src="../../images/pages/index/news-section/accordion-arrow.png?quality=70" alt="arrow">
               </button>
             </div>
             <div class="news__accordion-tab-lower">
@@ -591,7 +583,8 @@
                 Explore
               </a>
               <p class="news__acccordion-text">
-                What color makes intetiror softer? What makes it rougher? You'll know it in this article.
+                What color makes intetiror softer? What makes it&nbsp;rougher? You&rsquo;ll know it&nbsp;in&nbsp;this
+                article.
               </p>
             </div>
           </div>
