--- a/src/pages/portfolio/portfolio.html
+++ b/src/pages/portfolio/portfolio.html
@@ -15,7 +15,13 @@
   <meta property="og:description" content="Design bureau renders excluesive full cycle design services">
   <meta property="og:image" content="https://benhome.netlify.app/logo-black.ad386149.png">
   <!-- /og -->
-
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- /favicon -->
   <!-- fonts preload -->
   <link rel="preload" href="../../fonts/SFProDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../fonts/SFProDisplay-Semibold.woff2" as="font" type="font/woff2" crossorigin>
