--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -15,7 +15,13 @@
   <meta property="og:description" content="Design bureau renders excluesive full cycle design services">
   <meta property="og:image" content="https://benhome.netlify.app/logo-black.ad386149.png">
   <!-- /og -->
-
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- /favicon -->
   <!-- fonts preload -->
   <link rel="preload" href="../../fonts/SFProDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../fonts/SFProDisplay-Semibold.woff2" as="font" type="font/woff2" crossorigin>
@@ -97,8 +103,9 @@
           Our philosophy
         </h2>
         <div class="idea__text">
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-          1.10.32 and 1.10.33 from de Finibus Bonorum et Malorum" are also
+          Exceptional creativity mixed with vision, marketing, and cutting edge technology is&nbsp;what we&nbsp;pour
+          behind the
+          bar.
         </div>
       </div>
       <div class="idea__upper-right">
@@ -123,8 +130,9 @@
           Years of Experience
         </h2>
         <p class="idea__lower-text">
-          de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English 14 translation by H.
-          Rackham
+          We&nbsp;are passionate about providing our clients with a&nbsp;high level of&nbsp;service and always aim
+          to&nbsp;exceed their
+          expectations.
         </p>
       </div>
       <div class="idea__lower-right">
@@ -135,8 +143,7 @@
           Projects done
         </h2>
         <p class="idea__lower-text">
-          de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English 14 translation by H.
-          Rackham
+          Every project we&nbsp;produce must not only look beautiful but has to&nbsp;be&nbsp;functional too.
         </p>
       </div>
     </div>
@@ -144,7 +151,7 @@
   <section class="services">
     <div class="services__wrapper">
       <div class="services__left">
-        <h3 class="services__title">
+        <h3 class="services__title" tabindex="0">
           Services
         </h3>
       </div>
@@ -153,21 +160,21 @@
           <li class="services__list-item">
             <div class="services__list-item-upper">
               <h4 class="services__list-item-title" tabindex="0">
-                Architecture design
+                Architecture Design
               </h4>
-              <button class="services__list-item-btn services__list-item-btn--active">
+              <button class="services__list-item-btn services__list-item-btn--active" tabindex="0">
                 <div class="services__list-item-btn-down-arrow services__list-item-btn-down-arrow--active">
                 </div>
               </button>
             </div>
             <div class="services__list-item-lower services__list-item-lower--active">
-              <a class="services__list-item-link" href="#">
+              <a class="services__list-item-link" href="#" tabindex="0">
                 Explore
               </a>
               <p class="services__list-item-text">
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+                Our work experience includes residential design, commercial design,
+                architectural engineering and interior design. Our clients include
+                residential, commercial and industrial firms.
               </p>
             </div>
           </li>
@@ -176,40 +183,37 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Planning
               </h4>
-              <button class="services__list-item-btn">
+              <button class="services__list-item-btn" tabindex="0">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
             </div>
             <div class="services__list-item-lower">
-              <a class="services__list-item-link" href="#">
+              <a class="services__list-item-link" href="#" tabindex="0">
                 Explore
               </a>
               <p class="services__list-item-text">
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+                We&nbsp;believe that you can reach a&nbsp;lot more in&nbsp;your project with planning.
               </p>
             </div>
           </li>
           <li class="services__list-item">
             <div class="services__list-item-upper">
               <h4 class="services__list-item-title" tabindex="0">
-                Landscape design
+                Landscape Design
               </h4>
-              <button class="services__list-item-btn">
+              <button class="services__list-item-btn" tabindex="0">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
             </div>
             <div class="services__list-item-lower">
-              <a class="services__list-item-link" href="#">
+              <a class="services__list-item-link" href="#" tabindex="0">
                 Explore
               </a>
               <p class="services__list-item-text">
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+                Landscape disigns itself is&nbsp;a &rsquo;distillation of&nbsp;the views, ideas and thoughts&rsquo; held
+                by&nbsp;our firm.
               </p>
             </div>
           </li>
@@ -218,19 +222,18 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Branding
               </h4>
-              <button class="services__list-item-btn">
+              <button class="services__list-item-btn" tabindex="0">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
             </div>
             <div class="services__list-item-lower">
-              <a class="services__list-item-link" href="#">
+              <a class="services__list-item-link" href="#" tabindex="0">
                 Explore
               </a>
               <p class="services__list-item-text">
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+                The first thing people notice and the last thing they remember.
+                Successful branding recognition is&nbsp;our main goal.
               </p>
             </div>
           </li>
@@ -239,19 +242,19 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Style
               </h4>
-              <button class="services__list-item-btn">
+              <button class="services__list-item-btn" tabindex="0">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
             </div>
             <div class="services__list-item-lower">
-              <a class="services__list-item-link" href="#">
+              <a class="services__list-item-link" href="#" tabindex="0">
                 Explore
               </a>
               <p class="services__list-item-text">
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                Sections
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+                We&rsquo;re not perfect, but we&nbsp;strive for excellence. We&nbsp;work hard
+                to&nbsp;find the best way to&nbsp;make our customers happy, and we&rsquo;re
+                excited to&nbsp;be&nbsp;able to&nbsp;share out style with you
               </p>
             </div>
           </li>
@@ -270,12 +273,11 @@
         <div class="team__person team__person--1">
           <div class="team__person-info">
             <h3 class="team__person-title">
-              Adam Raymond
+              Nikki Smith
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+              Nikki specializes in&nbsp;interior design. She worked with a&nbsp;lot of&nbsp;famous brands
+              and was approved as&nbsp;a&nbsp;high level specialist.
             </p>
             <ul class="socials">
               <li class="socials__item">
@@ -305,9 +307,7 @@
               Adam Raymond
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+              Adam is&nbsp;our lead exterior designer who provides best disign practices for our clients.
             </p>
             <ul class="socials">
               <li class="socials__item">
@@ -336,12 +336,11 @@
         <div class="team__person team__person--3">
           <div class="team__person-info">
             <h3 class="team__person-title">
-              Adam Raymond
+              Mary Taylor
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+              Mary is&nbsp;a&nbsp;senior architect who participates in&nbsp;the most complex and difficult projects
+              of&nbsp;our firm.
             </p>
             <ul class="socials">
               <li class="socials__item">
@@ -368,12 +367,11 @@
         <div class="team__person team__person--4">
           <div class="team__person-info">
             <h3 class="team__person-title">
-              Adam Raymond
+              Billy Brown
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+              Billy is&nbsp;our senior achitect. He&nbsp;is&nbsp;a&nbsp;winner of&nbsp;many
+              competitions with a&nbsp;great portfolio of&nbsp;clients.
             </p>
             <ul class="socials">
               <li class="socials__item">
