--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -40,7 +40,7 @@
       <button class="header__mobile-btn--open">
       </button>
       <a class="header__logo" href="/" aria-label="Header logo">
-        <img class="header__logo-benhome" src="../../images/general.imgs/logo-white.png?quality=70" alt="logo-white">
+        <img class="header__logo-img" src="../../images/general.imgs/logo-white.png?quality=70" alt="logo-white">
       </a>
       <nav class="header__nav">
         <button class="header__mobile-btn--close">
@@ -252,7 +252,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Architecture Design
               </h4>
-              <button class="services__list-item-btn services__list-item-btn--active" tabindex="0">
+              <button class="services__list-item-btn services__list-item-btn--active" tabindex="0" aria-label="Open item">
                 <div class="services__list-item-btn-down-arrow services__list-item-btn-down-arrow--active">
                 </div>
               </button>
@@ -263,8 +263,7 @@
               </a>
               <p class="services__list-item-text">
                 Our work experience includes residential design, commercial design,
-                architectural engineering and interior design. Our clients include
-                residential, commercial and industrial firms.
+                architectural engineering and interior design.
               </p>
             </div>
           </li>
@@ -273,7 +272,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Planning
               </h4>
-              <button class="services__list-item-btn" tabindex="0">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -292,7 +291,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Landscape Design
               </h4>
-              <button class="services__list-item-btn" tabindex="0">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -312,7 +311,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Branding
               </h4>
-              <button class="services__list-item-btn" tabindex="0">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -332,7 +331,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Style
               </h4>
-              <button class="services__list-item-btn" tabindex="0">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -468,9 +467,9 @@
   <section class="news">
     <div class="container news__container">
       <div class="news__side news__side--left">
-        <h2 class="news__title">
+        <h3 class="news__title">
           News.
-        </h2>
+        </h3>
         <div class="news__accordion">
           <div class="news__accordion-tab">
             <div class="news__accordion-tab-upper">
@@ -620,7 +619,7 @@
   </section>
   <footer class="footer">
     <a class="footer__logo" href="/" aria-label="Footer logo">
-      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo">
+      <img class="footer__logo-img" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo">
     </a>
     <p class="footer__rights">
       &copy; Sentro 2021 <br>
