--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -29,7 +29,7 @@
   <!-- /fonts preload -->
   <title>Benhome: Home</title>
   <link rel="stylesheet" href="./index.scss">
-  <script src="./index.js" type="module" defer></script>
+  <script src="./index.js" type="module"></script>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
   </div>
   <header class="header">
     <div class="header__upper">
-      <button class="header__mobile-btn--open">
+      <button class="header__mobile-btn--open" aria-label="Mobile menu button">
       </button>
       <a class="header__logo" href="/" aria-label="Header logo">
         <img class="header__logo-img" src="../../images/general.imgs/logo-white.png?quality=70" alt="logo-white">
@@ -252,7 +252,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Architecture Design
               </h4>
-              <button class="services__list-item-btn services__list-item-btn--active" tabindex="0" aria-label="Open item">
+              <button class="services__list-item-btn services__list-item-btn--active" tabindex="0" aria-label="Open item button">
                 <div class="services__list-item-btn-down-arrow services__list-item-btn-down-arrow--active">
                 </div>
               </button>
@@ -272,7 +272,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Planning
               </h4>
-              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item button">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -291,7 +291,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Landscape Design
               </h4>
-              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item button">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -311,7 +311,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Branding
               </h4>
-              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item button">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
@@ -331,7 +331,7 @@
               <h4 class="services__list-item-title" tabindex="0">
                 Style
               </h4>
-              <button class="services__list-item-btn" tabindex="0" aria-label="Open item">
+              <button class="services__list-item-btn" tabindex="0" aria-label="Open item button">
                 <div class="services__list-item-btn-down-arrow">
                 </div>
               </button>
