--- a/src/pages/portfolio/portfolio.html
+++ b/src/pages/portfolio/portfolio.html
@@ -29,7 +29,7 @@
   <!-- /fonts preload -->
   <title>Benhome: Portfolio</title>
   <link rel="stylesheet" href="./portfolio.scss">
-  <script src="./portfolio.js" type="module" defer></script>
+  <script src="./portfolio.js" type="module"></script>
 </head>
 
 <body>
@@ -37,10 +37,10 @@
   </div>
   <header class="header">
     <div class="header__upper">
-      <button class="header__mobile-btn--open">
+      <button class="header__mobile-btn--open" aria-label="Mobile menu button">
       </button>
       <a class="header__logo" href="/" aria-label="Header logo">
-        <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo-white">
+        <img class="header__logo-img" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo-white">
       </a>
       <nav class="header__nav">
         <button class="header__mobile-btn--close">
@@ -280,7 +280,7 @@
   </section>
   <footer class="footer">
     <a class="footer__logo" href="/" aria-label="Footer logo">
-      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo">
+      <img class="footer__logo-img" src="../../images/general.imgs/logo-black.png?quality=70" alt="logo">
     </a>
     <p class="footer__rights">
       &copy; Sentro 2021 <br>
